feat(socket): implement connection lifecycle and messaging functionality
- Added connection lifecycle handler to manage user connection and presence.
- Implemented disconnect event handler to update user status on disconnect.
- Created conversation and message socket handlers for managing messaging features.
- Introduced validation schemas for message sending and user authentication.
- Enhanced socket error handling with a dedicated SocketError class.
- Established utility functions for managing socket connections and responses.
- Created admin seeding script to ensure an admin user exists in the database.
- Refactored socket event handling for improved error management and response structure.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "start": "node index.js",
+        "dev": "ts-node --transpile-only src/index.ts",
         "dev:typecheck": "ts-node-dev --respawn src/index.ts",
         "typecheck": "tsc --noEmit",
         "build": "tsc -w",
         "lint": "eslint src/**/*.ts",
         "lint:fix": "eslint src/**/*.ts --fix",
-        "format": "prettier . --write"
+        "format": "prettier . --write",
+        "seed": "ts-node src/db/seed.ts"
     },
     "author": "Muhammad Abu Bakar",
     "license": "ISC",
@@ -50,6 +52,7 @@
         "eslint-config-prettier": "^10.1.5",
         "globals": "^16.1.0",
         "prettier": "^3.5.3",
+        "tsx": "^4.21.0",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.32.1"
     }
