--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "author": "Muhammad Abu Bakar",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.13.5",
         "bcrypt": "^6.0.0",
         "cloudinary": "^2.6.1",
         "cors": "^2.8.5",
@@ -32,6 +33,7 @@
         "multer": "^2.0.0",
         "nodemailer": "^7.0.3",
         "socket.io": "^4.8.1",
+        "stripe": "^20.3.1",
         "ts-node-dev": "^2.0.0",
         "twilio": "^5.7.3",
         "zod": "^3.25.28"
